Fix btn-group spacing

--- a/frontend/src/styles/components/submitted.scss
+++ b/frontend/src/styles/components/submitted.scss
@@ -15,13 +15,7 @@
 
   &__btn-group {
     @extend .btn-group;
-    @extend .pt-4;
+    @extend .mt-4;
     @extend .btn-group--centered;
-
-    & > * {
-      &:not(:last-child) {
-        @extend .mr-3;
-      }
-    }
   }
 }
